# mfd-switchmanagement

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: check_code_standard.yml  main.yml  manual_release.yml  pull_requests.yml  run_tests.yml
examples/: SwitchExample.py  ovs_example.py  ssh_keys_usage.py
sphinx-doc/: Makefile  README.md  conf.py  generate_docs.py  index.rst
tests/unit/test_mfd_switchmanagement/: test_base.py
tests/unit/test_mfd_switchmanagement/test_connections/: test_ssh.py
tests/unit/test_mfd_switchmanagement/test_connections/test_api/: test_cisco_api.py
tests/unit/test_mfd_switchmanagement/test_vendors/: test_ovs.py
tests/unit/test_mfd_switchmanagement/test_vendors/test_arista/: test_arista.py
tests/unit/test_mfd_switchmanagement/test_vendors/test_cisco/: test_base.py  test_nx.py
tests/unit/test_mfd_switchmanagement/test_vendors/test_dell/test_dell_os10/: test_base.py
tests/unit/test_mfd_switchmanagement/test_vendors/test_dell/test_dell_os9/: test_base.py  test_dell_force10.py  test_dell_s5048.py
tests/unit/test_mfd_switchmanagement/test_vendors/test_extreme/: test_extreme.py
tests/unit/test_mfd_switchmanagement/test_vendors/test_ibm/: test_base.py
tests/unit/test_mfd_switchmanagement/test_vendors/test_mellanox/: test_mellanox.py  test_mellanox_25G.py
