[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project]
name = "mfd-switchmanagement"
description = "Module for handling operations on switches from different vendors (for example IBM, Cisco, Dell)"
requires-python = ">=3.10, <3.14"
version = "2.17.0"
dynamic = ["dependencies"]
license-files = ["LICENSE.md", "AUTHORS.md"]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/intel/mfd"
Repository = "https://github.com/intel/mfd-switchmanagement"
Issues = "https://github.com/intel/mfd-switchmanagement/issues"
Changelog = "https://github.com/intel/mfd-switchmanagement/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["examples", "tests*", "sphinx-doc"]